Use msys2 python instead, remove useless symlinks.
Fixing initial issues, it should work better.
Symlinks do not work well under msys2 so I removed them.

--- a/mingw-w64-ardour/PKGBUILD
+++ b/mingw-w64-ardour/PKGBUILD
@@ -17,7 +17,7 @@ license=(
   GPL-3.0-or-later
   MIT
 )
-groups=(pro-audio)
+groups=(${MINGW_PACKAGE-PREFIX}-pro-audio)
 depends=(
   ${MINGW_PACKAGE_PREFIX}-cairo
   ${MINGW_PACKAGE_PREFIX}-gcc-libs
@@ -69,7 +69,8 @@ makedepends=(
   ${MINGW_PACKAGE_PREFIX}-sratom
   unzip
   ${MINGW_PACKAGE_PREFIX}-vamp-plugin-sdk
-  ${MINGW_PACKAGE_PREFIX}-waf
+  #${MINGW_PACKAGE_PREFIX}-waf
+  python
 )
 optdepends=(
   'harvid: for video timeline and MP3 export'
@@ -130,8 +131,10 @@ prepare() {
 build() {
   local waf_configure_options=(
     --prefix=${MINGW_PREFIX}
+    --check-c-compiler=${CC}
+    --check-cxx-compiler=${CXX}
     --dist-target=mingw 
-    --configdir=/share
+    --configdir=/etc
     --cxx11
     --freedesktop
     --no-phone-home
@@ -139,8 +142,6 @@ build() {
     --ptformat
     --with-backends="portaudio,dummy,jack"
     --out="${srcdir}/build-${MSYSTEM}"
-    --check-cxx-compiler=g++
-    --check-c-compiler=gcc
   )
   #waf expects CC and CXX to be complete path variables, in case it is set, it will NOT check path
   unset CC
@@ -150,58 +151,21 @@ build() {
   export CXXFLAGS+=" -Wno-deprecated-declarations"
   cd $_realname
   export LINKFLAGS="$LDFLAGS"
-  waf configure "${waf_configure_options[@]}"
-  waf build 
+  /usr/bin/python waf configure "${waf_configure_options[@]}"
+  /usr/bin/python waf build 
 }
 
 package() {
-  depends+=(
-#    alsa-lib libasound.dll
-#    aubio libaubio.dll
-#    cairomm libcairomm-1.0.dll
-#    curl libcurl.dll
-#    dbus libdbus-1.dll
-#    fftw libfftw3f.dll libfftw3f_threads.dll
-#    fluidsynth libfluidsynth.dll
-#    fontconfig libfontconfig.dll
-#    glib2 libglib-2.0.dll libgobject-2.0.dll
-#    glibmm libglibmm-2.4.dll
-#    jack libjack.dll
-#    libarchive libarchive.dll
-#    liblo liblo.dll
-#    liblrdf liblrdf.dll
-#    libltc libltc.dll
-#    libpng libpng16.dll
-#    libsamplerate libsamplerate.dll
-#    libsndfile libsndfile.dll
-#    libusb libusb-1.0.dll
-#    libwebsockets libwebsockets.dll
-#    libxml2 libxml2.dll
-#    lilv liblilv-0.dll
-#    pango libpango-1.0.dll libpangocairo-1.0.dll libpangoft2-1.0.dll
-#    pangomm libpangomm-1.4.dll
-#    readline libreadline.dll
-#    rubberband librubberband.dll
-#    vamp-plugin-sdk libvamp-hostsdk.dll libvamp-sdk.dll
-  )
-
   (
     cd $_realname
-    #waf i18n --destdir="${pkgdir}"
-    export pkgdir=$pkgdir
-    export _realname=$_realname
-    #bash # to debug
-    waf install --destdir="../build-${MSYSTEM}"
+    /usr/bin/python waf i18n --destdir="${pkgdir}"
+    #echo Install destination :--destdir="$(cygpath -w $pkgdir)"  is $pkgdir is ${pkgdir} 
+    /usr/bin/python waf install --destdir="${pkgdir}" --libdir="${MINGW_PREFIX}/lib" --prefix=${MINGW_PREFIX}
     install -vDm 644 $_realname.1 -t "${pkgdir}${MINGW_PREFIX}/share/man/man1/"
   )
 
   # installation of MIDI files is a bit of a horrorshow, as upstream is not flexible about tarball naming, etc.
   cd "${srcdir}/build-${MSYSTEM}"
-  install -vdm 755 "${pkgdir}${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/"
-  unzip $srcdir/../$_realname-midi-$pkgver.zip -d $(cygpath -w "$pkgdir${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/")
-#  install -vdm 755 "${pkgdir}${MINGW_PREFIX}/share/licenses/$pkgname/"
-#  ln -s "${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/MIDI Beats/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/$_realname/LICENSE.beats"
-#  ln -s "${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/MIDI Chords/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/$_realname/LICENSE.chords"
-#  ln -s "${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/MIDI Progressions/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/$_realname/LICENSE.progressions"
+  unzip $srcdir/../$_realname-midi-$pkgver.zip -d "$pkgdir${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/"
 }
 # vim:set ts=2 sw=2 et:
