libgit2: update to 1.8.4

--- a/mingw-w64-libgit2/PKGBUILD
+++ b/mingw-w64-libgit2/PKGBUILD
@@ -4,12 +4,13 @@ _realname=libgit2
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-winhttp")
-pkgver=1.7.2
-pkgrel=3
+pkgver=1.8.4
+pkgrel=1
 pkgdesc='A linkable library for Git (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/libgit2/libgit2'
+url='https://libgit2.org/'
+msys2_repository_url='https://github.com/libgit2/libgit2'
 msys2_references=(
   "cpe: cpe:/a:libgit2:libgit2"
   "cpe: cpe:/a:libgit2_project:libgit2"
@@ -27,14 +28,12 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-openssl"
   "${MINGW_PACKAGE_PREFIX}-python"
 )
-source=(${_realname}-${pkgver}.tar.gz::"https://github.com/libgit2/libgit2/archive/v${pkgver}.tar.gz"
+source=("${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-libgit2-1.4.2-rc-filename.patch"
-        "0002-cmake-fix-openssl-build-on-win32.patch"
         "0003-libgit2-cmake-fix-pkgconfig.patch")
 noextract=(${_realname}-${pkgver}.tar.gz)
-sha256sums=('de384e29d7efc9330c6cdb126ebf88342b5025d920dcb7c645defad85195ea7f'
-            'bdffd718bbf178817d5cfd80f9d5a9706b9c6ff981b1631978ae02657cbf2a55'
-            '4329cef22a301adf67652ac00372e08077fe4dd005f7036751be413dda6ac156'
+sha256sums=('49d0fc50ab931816f6bfc1ac68f8d74b760450eebdb5374e803ee36550f26774'
+            '1a217eddf7daa549b12ccf88e275782ac7a7fa385d5afb59aac0351ee5b97a44'
             '0d7cff6db9a7d3f0ed63540a3a91365afeb43217787b0db8519c34fe73bc9757')
 
 prepare() {
@@ -42,9 +41,6 @@ prepare() {
   cd ${_realname}-${pkgver}
 
   patch -Np1 -i "${srcdir}/0001-libgit2-1.4.2-rc-filename.patch"
-
-  # https://github.com/libgit2/libgit2/pull/6626
-  patch -Np1 -i "${srcdir}/0002-cmake-fix-openssl-build-on-win32.patch"
   patch -Np1 -i "${srcdir}/0003-libgit2-cmake-fix-pkgconfig.patch"
 }
 
