--- a/mingw-w64-flang/PKGBUILD
+++ b/mingw-w64-flang/PKGBUILD
@@ -9,7 +9,7 @@ _version=19.1.7
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=1
+pkgrel=2
 pkgdesc="Fortran frontend for LLVM (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -41,6 +41,7 @@ source=("${_url}/${_pkgfn}.tar.xz"{,.sig}
         "${_url}/cmake-${pkgver}.src.tar.xz"{,.sig}
         "0001-fold-double-bessel-functions-on-windows.patch"
         "0002-cmake-22162.patch"
+        "0003-flang-Inherit-target-specific-code-for-BIND-C-types.patch"
         "0004-do-not-define-pid_t-on-mingw.patch"
         "0005-Fix-c_long_double-value-on-mingw-aarch64.patch"
         "0006-Rename-flang-new-flang-experimental-exec-to-flang.patch"
@@ -52,6 +53,7 @@ sha256sums=('632d598e990500c021a47b4f981efd39518d363b03d99da5ba4c1b14d838c40b'
             'SKIP'
             'ae666c454909f6695bcd69f067b9c5abf8a6e82ce2930955b8598ab3b58a5204'
             '77fb0612217b6af7a122f586a9d0d334cd48bb201509bf72e8f8e6244616e895'
+            'bb7336e461a09d4af29cde2fd32081c8fcca7f93e9f9b6779eb074b3780fd002'
             '90bec8f2a9a8d62b57959722f3b15a54dfdaf24e0a5ea884bf6b1288d0853be8'
             'a1811227e2a26c2786b0c8577528580e679111f6c0889afea57d08333e2d5e4f'
             'f1b7a186e4890a67adc8e56800c7a91e72f04f14df3db20d7bcf7eaa149aa567'
@@ -77,6 +79,7 @@ prepare() {
   apply_patch_with_msg \
     "0001-fold-double-bessel-functions-on-windows.patch" \
     "0002-cmake-22162.patch" \
+    "0003-flang-Inherit-target-specific-code-for-BIND-C-types.patch" \
     "0004-do-not-define-pid_t-on-mingw.patch" \
     "0005-Fix-c_long_double-value-on-mingw-aarch64.patch" \
     "0007-add-municode-flag-on-mingw.patch" \
