sundials: update to 7.2.0

--- a/mingw-w64-sundials/PKGBUILD
+++ b/mingw-w64-sundials/PKGBUILD
@@ -13,7 +13,7 @@ fi
 _realname=sundials
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=7.1.1
+pkgver=7.2.0
 pkgrel=1
 pkgdesc="SUite of Nonlinear and DIfferential/ALgebraic equation Solvers (mingw-w64)"
 arch=('any')
@@ -31,17 +31,21 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-openblas"
          "${MINGW_PACKAGE_PREFIX}-omp"
          "${MINGW_PACKAGE_PREFIX}-suitesparse"
+         $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran")
          $([[ "$_enable_mpi" == "yes" ]] && echo \
            "${MINGW_PACKAGE_PREFIX}-petsc" \
            "${MINGW_PACKAGE_PREFIX}-superlu_dist"))
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-fc"
              $([[ "$_enable_mpi" == "yes" ]] && echo "${MINGW_PACKAGE_PREFIX}-msmpi"))
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: for running examples")
 source=(https://github.com/LLNL/sundials/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz
+        '0001-fix-building-openmp-example-with-flang.patch'
         '0008-sundials-petsc-pkg-config-module.patch')
-sha256sums=('ea7d6edfb52448ddfdc1ec48f89a721fe6c0a259c10f8ef56f60fcded87a94bb'
-            'd4a56ef02d87d8d17970733fe8391c12fea9465f093681a1091a24b2ad0a787a')
+sha256sums=('5c6c0a66a7e27c45bfb57b27f7579463855a85fc3976fed1d5c9dd88dc1ae3ab'
+            '785b7a824702fcc3267cec5d3f9c418dee2940efc9513516c642fd3129e36eb5'
+            '46f341d50e97960fd93ee516e7ade99ca5ac87db7d5d077ae09d26da3e4f7355')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -55,6 +59,7 @@ prepare() {
   cd "${_realname}-${pkgver}"
 
   apply_patch_with_msg \
+    0001-fix-building-openmp-example-with-flang.patch \
     0008-sundials-petsc-pkg-config-module.patch
 }
 
@@ -66,10 +71,6 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
-  fi
-
-  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    export FFLAGS="-Qunused-arguments"
   fi
 
   if [[ "$_enable_mpi" != "yes" ]]; then
@@ -95,12 +96,14 @@ build() {
   fi
 
   I_MPI_ROOT="" \
+  CFLAGS+=" -Wno-return-type -Wno-deprecated-declarations" \
+  LDFLAGS+=" -Wl,--export-all-symbols" \
   MSYS2_ARG_CONV_EXCL="CMAKE_INSTALL_PREFIX=;EXAMPLES_INSTALL_PATH=" \
   ${MINGW_PREFIX}/bin/cmake \
     -D BUILD_ARKODE=ON \
     -D BUILD_CVODE=ON \
     -D BUILD_CVODES=ON \
-    -D BUILD_FORTRAN_MODULE_INTERFACE=OFF \
+    -D BUILD_FORTRAN_MODULE_INTERFACE=ON \
     -D BUILD_IDA=ON \
     -D BUILD_IDAS=ON \
     -D BUILD_KINSOL=ON \
@@ -133,16 +136,17 @@ build() {
     -D ENABLE_XBRAID=OFF \
     -D EXAMPLES_ENABLE_C=ON \
     -D EXAMPLES_ENABLE_CXX=ON \
-    -D EXAMPLES_ENABLE_F2003=OFF \
+    -D EXAMPLES_ENABLE_F2003=ON \
     -D EXAMPLES_INSTALL=ON \
     -D EXAMPLES_INSTALL_PATH=${MINGW_PREFIX}/share/sundials/examples \
     -D LAPACK_LIBRARIES=${MINGW_PREFIX}/lib/libopenblas.dll.a \
     -D SUNDIALS_BUILD_WITH_PROFILING=OFF \
     -D SUNDIALS_BUILD_WITH_MONITORING=ON \
-    -D SUNDIALS_INDEX_SIZE=32 \
+    -D SUNDIALS_INDEX_SIZE=64 \
     -D SUNDIALS_PRECISION=DOUBLE \
-    -DSUNDIALS_LAPACK_CASE=LOWER \
-    -DSUNDIALS_LAPACK_UNDERSCORES=ONE \
+    -D SUNDIALS_LAPACK_CASE=LOWER \
+    -D SUNDIALS_LAPACK_UNDERSCORES=ONE \
+    -D Fortran_INSTALL_MODDIR=include/sundials/fortran \
     -B build-${MSYSTEM} \
     -S ${_realname}-${pkgver}
 
