libtool: update to 2.5.3

--- a/mingw-w64-libtool/PKGBUILD
+++ b/mingw-w64-libtool/PKGBUILD
@@ -2,10 +2,10 @@
 # Contributor: Ray Donnelly <mingw.android@gmail.com>
 
 _realname=libtool
-pkgbase=mingw-w64-libtool
+pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-libtool" "${MINGW_PACKAGE_PREFIX}-libltdl")
-pkgver=2.4.7
-pkgrel=2
+pkgver=2.5.3
+pkgrel=1
 pkgdesc="A generic library support script (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -13,68 +13,70 @@ url="https://www.gnu.org/software/libtool"
 msys2_references=(
   "cpe: cpe:/a:gnu:libtool"
 )
-license=("GPL")
+license=('spdx:LGPL-2.0-or-later WITH Libtool-exception')
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
-  "automake-wrapper"
   "autoconf-wrapper"
+  "automake-wrapper"
   "help2man"
+  "m4"
 )
-source=("https://ftp.gnu.org/pub/gnu/libtool/${_realname}-${pkgver}.tar.xz"{,.sig}
-        0002-cygwin-mingw-Create-UAC-manifest-files.mingw.patch
-        0003-Pass-various-runtime-library-flags-to-GCC.mingw.patch
-        0005-Fix-seems-to-be-moved.patch
-        0006-Fix-strict-ansi-vs-posix.patch
-        0007-fix-cr-for-awk-in-configure.all.patch
-        0009-libtool-2.4.2.418-msysize.patch
-        0010-libtool-2.4.2-include-process-h.patch
+source=(https://ftp.gnu.org/gnu/libtool/${_realname}-${pkgver}.tar.xz{,.sig}
+        0001-cygwin-mingw-Create-UAC-manifest-files.patch
+        0001-handle-unset-multilib.patch
+        0002-Fix-seems-to-be-moved.patch
+        0003-Fix-STRICT_ANSI-vs-POSIX.patch
+        0004-Allow-statically-linking-Flang-support-libraries-whe.patch
+        0005-libtool-include-process.h.patch
+        0006-Pass-various-flags-to-GCC.patch
+        0007-msysize.patch
         0011-Pick-up-clang_rt-static-archives-compiler-internal-l.patch
         0012-Prefer-response-files-over-linker-scripts-for-mingw-.patch
         0013-Allow-statically-linking-compiler-support-libraries-.patch
-        0014-Support-llvm-objdump-f-output.patch
-        0015-Allow-statically-linking-Flang-support-libraries.patch)
-sha256sums=('4f7f217f057ce655ff22559ad221a0fd8ef84ad1fc5fcb6990cecc333aa1635d'
+        0014-Support-llvm-objdump-f-output.patch)
+sha256sums=('898011232cc59b6b3bbbe321b60aba9db1ac11578ab61ed0df0299458146ae2e'
             'SKIP'
-            'fe8b80efd34f9385220ebc90aaec945e44de8c343c75719d6ac0d4e472a6eed5'
-            '37d46a7964cf56617b897feb566537d847dee5e8f53e4771255d3cccf722918d'
-            'dc39fbe066958178f96108f07db62b48b9339efddf2c21f800ff8d67110ca393'
-            '6a94ada08b0a0aa36240efd9ccb826e22ab94ef0969270f2edb8be344dc8c62b'
-            'd96beecfc5d15f94ce46bbe0e89d6e6fdb973a25ad6be98c30504b58453792c1'
-            '1a858a13592a1a5bd56ae3c4e610408ca19ec9d318ebdfd96bebcfc585b2924f'
-            '0f3defa657d353b9f55469f6d514abd96494ce7459ef76bbd63980d8994cafe9'
-            'c727b2b017163cfdeca60820d3cff2dac8968c5630745602b150f92b159af313'
+            '67e4f2429dfe67499b1829d0a8312d9a043057db354307f8db41d9f967944346'
+            '994b6e75cce06557459dea34abd0d3fde462514c7566dea519dbbae800f1d746'
+            'd873306936060e6c72cf0f3c174131cc85debc2ea6dc924eabdf6e3a813c768e'
+            '00f0b0429431a884b481eb92f4b138c50bc17eb09f0985d7ebfd4a0a50407eb6'
+            '30b361a43266dbd80c94fe58196113ad3ae78e134da62d9dfad65ac67e337db8'
+            '0dd70a4f955ed4cd94a0d13b784b7db7dddbd4d1d6ee5b092202f8b9496fd3eb'
+            '2cb1b61247a4632698ac7e26c496c3ad8c1b4fde080d301994dbddc0794a4bf4'
+            'acec8e76b0d65c7b5f442203b2446d92a2f81ceaaa211cd2e6b8a036f5115280'
+            'de68dc9387f47ee129f55b2f525a7d222374ddd8915f4f42af05f185b779b826'
             'c95a65e890b1ae6362807abc66809e72cf81aeea5f9f556e38f9752f974bf435'
             '8069e887aeeab7491f15e00547fa66d9b9e86407f5a23f37a6d8c7d165de752e'
-            'db16cd322e0ebc578c906e94b0788810af17ce617c700a50db2e3c598dbbed7e'
-            '9fe454603a519e9ac50b32de125d4c5293520142c34a895c6e392a190719ff52')
-validpgpkeys=('7C5FBB96BE82B954AC20DF5F6EAC957F8EEB55C0') # "Alex Ameen <alex.ameen.tx@gmail.com>"
+            'e62e836f018339974f5ef7cf81bc0a4252901158eb0824eb62d0270206093ad7')
+validpgpkeys=('7C5FBB96BE82B954AC20DF5F6EAC957F8EEB55C0'  # Alex Ameen <alex.ameen.tx@gmail.com>
+              'FA26CA784BE188927F22B99F6570EA01146F7354') # Ileana Dumitrescu <ileanadumi95@protonmail.com>
 
+# Helper macros to help make tasks easier #
 apply_patch_with_msg() {
-  for _patch in "$@"
-  do
+  for _patch in "$@"; do
     msg2 "Applying $_patch"
-    patch -Nbp1 -i "${srcdir}/$_patch"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
   done
 }
+# =========================================== #
 
 prepare() {
   cd "${_realname}-${pkgver}"
 
   # Note: keep the patches in sync with msys libtool
   apply_patch_with_msg \
-    0002-cygwin-mingw-Create-UAC-manifest-files.mingw.patch \
-    0003-Pass-various-runtime-library-flags-to-GCC.mingw.patch \
-    0005-Fix-seems-to-be-moved.patch \
-    0006-Fix-strict-ansi-vs-posix.patch \
-    0007-fix-cr-for-awk-in-configure.all.patch \
-    \
-    0009-libtool-2.4.2.418-msysize.patch \
-    0010-libtool-2.4.2-include-process-h.patch \
+    0001-cygwin-mingw-Create-UAC-manifest-files.patch \
+    0001-handle-unset-multilib.patch \
+    0002-Fix-seems-to-be-moved.patch \
+    0003-Fix-STRICT_ANSI-vs-POSIX.patch \
+    0004-Allow-statically-linking-Flang-support-libraries-whe.patch \
+    0005-libtool-include-process.h.patch \
+    0006-Pass-various-flags-to-GCC.patch \
+    0007-msysize.patch \
     0011-Pick-up-clang_rt-static-archives-compiler-internal-l.patch \
     0012-Prefer-response-files-over-linker-scripts-for-mingw-.patch \
     0013-Allow-statically-linking-compiler-support-libraries-.patch \
-    0014-Support-llvm-objdump-f-output.patch \
-    0015-Allow-statically-linking-Flang-support-libraries.patch
+    0014-Support-llvm-objdump-f-output.patch
 }
 
 build() {
@@ -89,13 +91,21 @@ build() {
   make
 }
 
+check() {
+  cd "${_realname}-${pkgver}"
+
+  make check -k || warning "Tests failed"
+}
+
 package_libtool() {
-  depends=("${MINGW_PACKAGE_PREFIX}-libltdl")
+  depends=("${MINGW_PACKAGE_PREFIX}-libltdl=${pkgver}" "bash")
 
   cd "${_realname}-${pkgver}"
 
   make DESTDIR=${pkgdir} install-binSCRIPTS install-man install-info \
                          install-data-local
+
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${pkgname#${MINGW_PACKAGE_PREFIX}-}"
 
   # Fix paths
   local WINPREFIX=$(cygpath -wm ${MINGW_PREFIX})
@@ -103,12 +113,14 @@ package_libtool() {
 }
 
 package_libltdl() {
-  pkgdesc="A system independent dlopen wrapper for GNU libtool"
+  pkgdesc="A system independent dlopen wrapper for GNU libtool (mingw-w64)"
 
   cd "${_realname}-${pkgver}"
 
   make DESTDIR=${pkgdir} install-libLTLIBRARIES install-includeHEADERS \
                          install-ltdlincludeHEADERS
+
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/libltdl/COPYING.LIB" -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${pkgname#${MINGW_PACKAGE_PREFIX}-}"
 }
 
 # template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
