--- a/mingw-w64-librsvg/PKGBUILD
+++ b/mingw-w64-librsvg/PKGBUILD
@@ -4,7 +4,7 @@ _realname=librsvg
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=2.58.93
+pkgver=2.59.0
 pkgrel=1
 pkgdesc="SVG rendering library (mingw-w64)"
 arch=('any')
@@ -33,13 +33,11 @@ source=("https://download.gnome.org/sources/librsvg/${pkgver%.*}/${_realname}-${
         "glib-0.20.0.tar.gz::https://crates.io/api/v1/crates/glib/0.20.0/download"
         "glib-rs.patch"
         "0002-avoid-link-whole.patch"
-        "0003-pixbuf-loader-fix-install-prefix-and-dll-name.patch"
         "0004-add-option-for-disabling-convert.patch")
-sha256sums=('f116eaf8196fc8261b0bbbdf996a4fe1bc97dc25664f953b328194d049a0dada'
+sha256sums=('370d6ada5cf0de91ceb70d849ed069523ce5de2b33b4c7e86bc640673ad65483'
             'fee90a615ce05be7a32932cfb8adf2c4bbb4700e80d37713c981fb24c0c56238'
             'e0f5accba0ff47d9cdf79f506ea76ea0b373edaf6845a23180a00c15e0a8691d'
             '4cb597eef01a636ad7007b3a47b76e395f30b2347183b5acb1af94d39577a239'
-            '7720b53a4eba7663677a799c5edfd7c395ac6416a089e2946d61ac10c819f8ee'
             '0e042886d313b37f5db5e0405a5e37b3d3e4a6c66f94186677406136fa0e7a17')
 msys2_repository_url="https://gitlab.gnome.org/GNOME/librsvg"
 noextract=("${_realname}-${pkgver}.tar.xz")
@@ -60,10 +58,7 @@ prepare() {
     patch -p1 -i "${srcdir}/0002-avoid-link-whole.patch"
   fi
 
-  # it's not taking the install prefix into account
-  patch -p1 -i "${srcdir}/0003-pixbuf-loader-fix-install-prefix-and-dll-name.patch"
-
-  # cargo-c is using the C linker instead of the C++ one, so skip for now
+  # fails to link for the static build, so skip for now
   patch -p1 -i "${srcdir}/0004-add-option-for-disabling-convert.patch"
 
   echo "" >> Cargo.toml
