gn: update to 0.2200

--- a/mingw-w64-gn/PKGBUILD
+++ b/mingw-w64-gn/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=gn
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=0.2163.d823fd85
+pkgver=0.2200.95b0f8fe
 pkgrel=1
 pkgdesc='Meta-build system that generates build files for Ninja (mingw-w64)'
 arch=('any')
@@ -15,19 +15,16 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-python"
              "git")
-_commit=d823fd85da3fb83146f734377da454473b93a2b2
+_commit=95b0f8fe31a992a33c040bbe3867901335c12762
 source=(git+https://gn.googlesource.com/gn#commit=$_commit
         001-build-fixes.patch
-        002-add-missing-header.patch
         003-remove-msvc-flags.patch
         004-add-arm64-arch.patch)
 sha256sums=('SKIP'
-            'c8697b2ab981c73b7dacbedb1bd1650421626e662c92d9c3c1f63dc18e9919cd'
-            'd41ea264f389a34b3030ab5fb39107475a0e913123802dee241a20e1e5ecb1a5'
-            '5aec933502008cbe9baabcf57e7899e8153e29c1dea646a52ac71b8eb9306801'
-            'f2b66b481336de86b237b5d6062784323e6f359313a8063a9d670d9356e742d6')
+            '01045719f76a1127dc54586b8f1dc6111cc6210440d1d72a0afbc876d29d3c36'
+            '67f58d677f63bf5e9919f63d68afa007b1a2d14c5fae13cd5487bd1c41cf69de'
+            '1cd84e9f2c8e4daf4bdb12ae7accc15b57d3f2abf87ff40ebf2c5e180ddeca3f')
 
-# Helper macros to help make tasks easier #
 apply_patch_with_msg() {
   for _patch in "$@"
   do
@@ -45,17 +42,16 @@ prepare() {
   cd ${_realname}
 
   apply_patch_with_msg \
-  001-build-fixes.patch \
-  002-add-missing-header.patch \
-  003-remove-msvc-flags.patch \
-  004-add-arm64-arch.patch
+    001-build-fixes.patch \
+    003-remove-msvc-flags.patch \
+    004-add-arm64-arch.patch
 }
 
 build() {
   cd ${_realname}
   ./build/gen.py --allow-warnings --no-static-libstdc++
 
-  ${MINGW_PREFIX}/bin/ninja -C ./out
+  ninja -C ./out
 }
 
 package() {
