gammaray: update to 3.1.0

--- a/mingw-w64-gammaray/PKGBUILD
+++ b/mingw-w64-gammaray/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=gammaray
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.0.0
+pkgver=3.1.0
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -65,11 +65,11 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-3d: 3D plugins"
             "${MINGW_PACKAGE_PREFIX}-qt5-tools: Qt5 Widget Export actions plugin"
             "${MINGW_PACKAGE_PREFIX}-kcoreaddons-qt5: KJob tracker plugin"
             "${MINGW_PACKAGE_PREFIX}-kdstatemachineeditor-qt5: ")
-source=(https://github.com/KDAB/GammaRay/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz
+source=(${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz
         003-win32-not-elf.patch
         004-files-layout.patch
         005-fix-dll-naming.patch)
-sha256sums=('acd27dbbcbdf73fed497e0b5d6c477f2e11b59c48499752602677037dcd64ba5'
+sha256sums=('6b8e3005105bd9f7553a64fab68e724840b5cb411f3115f5a8577f999b2e9254'
             'b13e2caa213d0b83a37c72e57bb5dc6e1d7e3d06d3f3031ad8931df3059cd9c0'
             '5c7e44e3fa6e914e369c2149fe9ca4b9e133f6753c7c6539cef66c9aeac5da21'
             '1d4ebacca418f8f1c9df0c4c438742e63d5d372d37d1605ecf9b478b098155eb')
@@ -121,6 +121,7 @@ build() {
       -DECM_MKSPECS_INSTALL_DIR=${MINGW_PREFIX}/share/qt${_qt_ver}/mkspecs/modules \
       -DGAMMARAY_INSTALL_QT_LAYOUT=ON \
       -DGAMMARAY_MULTI_BUILD=FALSE \
+      -DGAMMARAY_WITH_KDSME=OFF \
       -DSTACK_DETAILS_AUTO_DETECT=OFF \
       -DMINGW_MSVCR_LIBRARY="" \
       -DQT_VERSION_MAJOR=${_qt_ver} \
