boost: try to enable asio for arm64 again
it's required for libtorrent, and at least that configuration builds fine
here on clang64

--- a/mingw-w64-boost/PKGBUILD
+++ b/mingw-w64-boost/PKGBUILD
@@ -4,7 +4,7 @@ _realname=boost
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.86.0
-pkgrel=4
+pkgrel=5
 pkgdesc="Free peer-reviewed portable C++ source libraries (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -75,7 +75,7 @@ build() {
   if [[ "${CARCH}" == "aarch64" ]]; then
     # boost context does not yet have an implementation for Windows ARM64
     # coroutine and fiber depend on context
-    _extra_config+=("-DBOOST_EXCLUDE_LIBRARIES='context;asio;cobalt;log;process;coroutine;fiber'")
+    _extra_config+=("-DBOOST_EXCLUDE_LIBRARIES='context;cobalt;log;process;coroutine;fiber'")
   fi
 
   if [[ "${CARCH}" != "i686" ]]; then
