pywin32: update to 308

--- a/mingw-w64-python-pywin32/PKGBUILD
+++ b/mingw-w64-python-pywin32/PKGBUILD
@@ -6,36 +6,38 @@
 _realname=pywin32
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-url='https://github.com/mhammond/pywin32'
+pkgver=308
+pkgrel=1
 pkgdesc='Python for Windows Extensions (mingw-w64)'
-license=('spdx:PSF-2.0')
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/mhammond/pywin32'
+license=('spdx:PSF-2.0')
 msys2_references=(
   'pypi: pywin32'
 )
-pkgver=306
-pkgrel=3
-depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-python")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              $([[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]] || echo "binutils")
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=(https://github.com/mhammond/${_realname}/archive/b${pkgver}.zip
+source=(https://github.com/mhammond/pywin32/archive/refs/tags/b${pkgver}.tar.gz
         001-compile-and-setup-fixes.patch
         002-com-extensions-fix.patch
         003-win32-extensions-fix.patch
         004-isapi-fix.patch
         005-swig-fix.patch
         006-mapi-headers-fix.patch)
-sha256sums=('28b9186237cb097816072ffc9e55a1d7332c07aac07be18e43f7e12ef9691f0a'
-            '8e0de5ab4ae0ecd88c70c4bfac28d9921f13979fb687ef676bfca21b95875030'
-            '47e4cfa575a7988caca160beb328d76a1ae8f15cf1cdd0e472c7d2a4ba326ae8'
-            'c03977d5a8bf43a06bf4390bb0bd63046361bd273ee08627f4a4bb86c2721492'
-            '6b7045764e92d34c292aae3ddb01be60ece593384e30126eb7773386a709884c'
-            '0ad3acc9c946a558a7d4c13574c6f4a25e897a9f81daff4b8a4b09b1cf019c50'
-            'a04e4c8ee86606188c55349c4be755c72a9f03830d6f24828aba6bfa251e030d')
+sha256sums=('8aa09d39739764bec2378cfbd45940264c8b7f5a24caa17f04a01f7b750799ce'
+            '6cf1981d8484b9874891b582e3c71ba9409d6c180a6f4e7fd84ec3307bfd746e'
+            'af050c9c1e9c92c5ed3be73b606a4b931c78d6bb01175ecf5db503ba688d64ba'
+            '0e4aadf7b6dec6baf1c347664396787110ad756d53720f2c1bb0eba48c733169'
+            '0d303188a4a34759e4be1c2e11d68ba33f40edaf3056656618490c983d932dff'
+            'cfe20ab0034b7f872d96363ea85261430f6a64ae403831978bd433c20415566c'
+            '14c7c6db61fcef7fa799770874bc4cad464fb8c08495a56c9cf5beb795ba522b')
 
-# Helper macros to help make tasks easier #
 apply_patch_with_msg() {
   for _patch in "$@"
   do
@@ -45,31 +47,30 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-    cd "${srcdir}/${_realname}-b${pkgver}"
-    apply_patch_with_msg \
+  cd "${_realname}-b${pkgver}"
+
+  apply_patch_with_msg \
     001-compile-and-setup-fixes.patch \
     002-com-extensions-fix.patch \
     003-win32-extensions-fix.patch \
     004-isapi-fix.patch \
     005-swig-fix.patch \
     006-mapi-headers-fix.patch
-
-    cd "${srcdir}"
-    rm -rf "python-build-${MSYSTEM}" | true
-    cp -r "${_realname}-b${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-    msg "Python build for ${MSYSTEM}"
-    cd "${srcdir}/python-build-${MSYSTEM}"
-    ${MINGW_PREFIX}/bin/python setup.py build --skip-verstamp
+  cp -r "${_realname}-b${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+
+  SETUPTOOLS_USE_DISTUTILS=1 \
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-    cd "${srcdir}/python-build-${MSYSTEM}"
-    MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-      --root="${pkgdir}" --optimize=1 --skip-build
+  cd "python-build-${MSYSTEM}"
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 "win32/License.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
 }
