--- a/mingw-w64-python-prometheus-client/PKGBUILD
+++ b/mingw-w64-python-prometheus-client/PKGBUILD
@@ -3,10 +3,7 @@
 _realname=prometheus-client
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.20.0
+pkgver=0.21.0
 pkgrel=1
 pkgdesc="Prometheus instrumentation library for Python applications (mingw-w64)"
 arch=('any')
@@ -20,12 +17,11 @@ license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-twisted")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('287629d00b147a32dcb2be0b9df905da599b2d82f80377083ec8463309a4bb89')
+sha256sums=('96c83c606b71ff2b0a433c98889d275f51ffec6c5e267de37c7a2b5c9aa9233e')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
