python-fire: update to 0.7.0

--- a/mingw-w64-python-fire/PKGBUILD
+++ b/mingw-w64-python-fire/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=fire
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.6.0
+pkgver=0.7.0
 pkgrel=1
 pkgdesc='Python Fire is a library for automatically generating command line interfaces (CLIs) from absolutely any Python object. (mingw-w64)'
 arch=('any')
@@ -13,14 +13,12 @@ msys2_references=(
   'pypi: fire'
 )
 license=('spdx:Apache-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-python-six"
-         "${MINGW_PACKAGE_PREFIX}-python-termcolor")
+depends=("${MINGW_PACKAGE_PREFIX}-python-termcolor")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('54ec5b996ecdd3c0309c800324a0703d6da512241bc73b553db959d98de0aa66')
+sha256sums=('961550f07936eaf65ad1dc8360f2b2bf8408fad46abbfa4d2a3794f8d2a95cdf')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
