--- a/mingw-w64-python-dill/PKGBUILD
+++ b/mingw-w64-python-dill/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=dill
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.3.8
+pkgver=0.3.9
 pkgrel=1
 pkgdesc='Serialize all of python (almost) (mingw-w64)'
 arch=('any')
@@ -17,11 +17,10 @@ license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
-options=(!strip)
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('3ebe3c479ad625c4553aca177444d89b486b1d84982eeacded644afc0cf797ca')
+sha256sums=('81aa267dddf68cbfe8029c42ca9ec6a4ab3b22371d1c450abc54422577b4512c')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
@@ -36,8 +35,9 @@ package() {
     --destdir="${pkgdir}" dist/*.whl
 
   local _PREFIX_WIN=$(cygpath -m ${MINGW_PREFIX})
-  sed -s "s|${_PREFIX_WIN}/bin/||g" -i "${pkgdir}${MINGW_PREFIX}/bin/get_objgraph"
-  sed -s "s|${_PREFIX_WIN}/bin/||g" -i "${pkgdir}${MINGW_PREFIX}/bin/undill"
+  for file in get_gprof get_objgraph undill; do
+    sed -s '1 { s/^#!.*python.*$/#!\/usr\/bin\/env python3/ }' -i "${pkgdir}${MINGW_PREFIX}/bin/$file"
+  done
 
   install -D -m644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
